#50 Fixed pom file and module-info
What: updated dependencies in pom file and added content to module-info

Why: to import springboot packages

Co-Authored-By; amfolle <amfolle@stud.ntnu.no>